--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Poppins", serif;
-  background-image: url(/images/concrete_seamless.png);
+  background-image: url(../images/concrete_seamless.png);
   background-color: #f1f1f1;
 }
 
