--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ header {
 }
 
 .card {
-  flex-basis:450px;
+  flex-basis: 450px;
   border-top-left-radius: 51px;
   border-top-right-radius: 51px;
 }
@@ -64,7 +64,8 @@ header {
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: stretch;
 }
 
 @media only screen and (min-width: 900px) {
@@ -83,9 +84,11 @@ header {
   }
 }
 
-@media (prefers-reduced-motion) {
+@media (prefers-reduced-motion: reduce) {
   #logo {
     animation: none;
+    width: 475px;
+    opacity: 1;
   }
 }
 
@@ -110,7 +113,7 @@ header {
   }
 
   .card {
-    flex: 1 1 325px; 
+    flex: 1 1 325px;
     border: 2px solid #45ADDD;
   }
 
